--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
-title: Polar Bear
+title: Belvedere Piscinas
 email: 
 description: > # this means to ignore newlines until "baseurl:"
-  Jekyll Theme Demo
+  Conheça este serviço de limpeza de piscinas!
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://username.github.io" # the base hostname & protocol for your site
-twitter_username: username
-github_username: username
+url: "http://belvederepiscinas.com.br" # the base hostname & protocol for your site
+instagram_username: belvederepiscinas
 
 # Build settings
 markdown: redcarpet
